test/sema/non-bool-if-condition.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void main() {
    // CHECK: [[@LINE+1]]:9: error: type 'int' is not convertible to boolean
    if (0) {}
}
